--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.3",
-    "redux": "^4.2.1"
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^18.0.11",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
