--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
+    "react-slider": "^2.0.6",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1"
   },
@@ -30,6 +31,7 @@
     "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^18.0.11",
     "@types/react-slick": "^0.23.10",
+    "@types/react-slider": "^1.3.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
