--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.10.1",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.2.2",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.14.1",
     "react-select": "^5.7.3",
